# Calculator

./: CMakeLists.txt  README.md
src/: main.cpp
src/algorithm/: ASTNode.cpp  ASTNode.h  CreateASTNode.cpp  CreateASTNode.h  TranslateASTNode.cpp  TranslateASTNode.h  environment.cpp  environment.h  parser.cpp  parser.h  token.cpp  token.h
src/ui/: CalculatorUI.cpp  CalculatorUI.h  MainWindow.cpp  MainWindow.h
